--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@ background-repeat: no-repeat;
     <img src="https://i.pinimg.com/236x/ea/f5/10/eaf510c27dc1a8296c26605310b76f71.jpg" alt="Profile Image">
     <div class="content">
         <h2>About Us</h2>
-        <p>Welcome to Skope Designs, where creativity meets precision. With over a decade of experience in the design industry, we are dedicated to crafting visually stunning and impactful designs. Our expertise spans creative branding, UI/UX design, and print media. We work closely with our clients to understand their vision and deliver bespoke solutions that make a lasting impression. Based in Kisumu, Kenya, we are passionate about helping businesses and individuals shine through innovative design.</p>
+        <p>Welcome to Skope Designs – Where Creativity Meets Innovation
+
+At Skope Designs, we specialize in transforming your ideas into visually compelling and strategically impactful designs. Whether you’re looking for a custom logo, a modern website, eye-catching social media graphics, or professional marketing materials, we deliver designs that help your brand stand out and make a lasting impression. Our services range from branding and digital marketing assets to content creation, all designed to elevate your brand and connect you with your audience. Based in Kisumu, Kenya, we are passionate about helping businesses and individuals shine through innovative and tailored design solutions. Let’s work together to turn your vision into reality! 🚀</p>
     </div>
 </section>
 
