--- a/index.html
+++ b/index.html
@@ -345,15 +345,15 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
     <p>&copy; 2025 Skope Designs. All rights reserved.</p>
     <div class="social-icons">
         <a href="https://www.facebook.com/engskope" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://x.com/sege_peter79144" aria-label="Twitter"><i class="fas fa-times"></i>
+        <a href="https://x.com/sege_peter79144" aria-label="Twitter"><i class="fas fa-twitter"></i>
         <a href="https://www.instagram.com/SkopeDesigns" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/peter-sege-221831303/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
          <a href="https://www.tiktok.com/@eng_skope" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
 
     </div>
     <div class="contact-info">
-        <a href="mailto:skopedesigns91@gmail.com"> Email Us:<i class="fas fa-envelope"></i></a>
-        <a href="https://wa.me/+254123456789" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="mailto:skopedesigns91@gmail.com"> Email Us: <br><i class="fas fa-envelope"></i></a>
+        <a href="https://wa.me/+254123456789" target="_blank">Whatsapp: <br><i class="fab fa-whatsapp"></i></a>
 
        
        
