--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
 
     </div>
     <div class="contact-info">
-        <a href="mailto:skopedesigns91@gmail.com"> Email Us: <br><i class="fas fa-envelope"></i></a>
+        <a href="mailto:skopedesigns91@gmail.com"> Email Us: <br><i class="fas fa-envelope"></i></a>  <br>
         <a href="https://wa.me/+254123456789" target="_blank">Whatsapp: <br><i class="fab fa-whatsapp"></i></a>
 
        
