--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ background-repeat: no-repeat;
     <h2>Creative Design Studio</h2>
     <h3><i>Design Beyond Boundaries</i></h3>
     <a href="https://drive.google.com/file/d/1XV3odTHSQ7ljORClFbZaEJERpmwzchOx/view?usp=sharing" class="btn">Resume</a>
-    <a href="https://wa.me/p/7852689948125343/254742380183" class="btn">Portfolio</a>
+    <a href="https://wa.me/p/254742380183" class="btn">Projects</a>
     <nav>
         <a href="#about" target="_blank">About</a>
         <a href="#services" target="_blank>Services</a>
@@ -345,7 +345,7 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
     <p>&copy; 2025 Skope Designs. All rights reserved.</p>
     <div class="social-icons">
         <a href="https://www.facebook.com/engskope" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://x.com/sege_peter79144" aria-label="Twitter"><i class="fas fa-twitter"></i>
+        <a href="https://x.com/sege_peter79144" aria-label="Twitter"><i class=""fab fa-twitter">"></i>
         <a href="https://www.instagram.com/SkopeDesigns" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/peter-sege-221831303/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
          <a href="https://www.tiktok.com/@eng_skope" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
@@ -353,7 +353,7 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
     </div>
     <div class="contact-info">
         <a href="mailto:skopedesigns91@gmail.com"> <i class="fas fa-envelope"></i></a> Email Us: 
-        <a href="https://wa.me/+254123456789" target="_blank"> ><i class="fab fa-whatsapp"></i></a> Whatsapp
+        <a href="https://wa.me/+254123456789" target="_blank"> <i class="fab fa-whatsapp"></i></a> Whatsapp
 
        
        
