--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
     </div>
     <div class="contact-info">
        Email Us:  <a href="mailto:skopedesigns91@gmail.com"> <i class="fas fa-envelope"></i></a> 
-       Whatsapp:  <a href="https://wa.me/+254123456789" target="_blank"> <i class="fab fa-whatsapp"></i></a>
+       Whatsapp:  <a href="https://wa.me/+254742380183" > <i class="fab fa-whatsapp"></i></a>
 
        
        
