--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ background-repeat: no-repeat;
     <h2>Creative Design Studio</h2>
     <h3><i>Design Beyond Boundaries</i></h3>
     <a href="https://drive.google.com/file/d/1XV3odTHSQ7ljORClFbZaEJERpmwzchOx/view?usp=sharing" class="btn">Resume</a>
-    <a href="https://wa.me/p/254742380183" class="btn">Projects</a>
+    <a href="https://wa.me/c/254742380183" class="btn">Projects</a>
     <nav>
         <a href="#about" target="_blank">About</a>
         <a href="#services" target="_blank>Services</a>
