--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
         <article class="blog-post">
             <h3>Latest Design Tools in 2025</h3>
             <p>Download free latest graphic design tools here</p>
-            <a href="https://getintopc.com">Click to download</a>
+            <a href="https://getintopc.com/?s=adobe">Click to download</a>
         </article>
         <!-- Add more blog posts as needed -->
     </div>
