--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ background-repeat: no-repeat;
     <a href="https://wa.me/c/254742380183" class="btn">Projects</a>
     <nav>
         <a href="#about" target="_blank">About</a>
-        <a href="#services" target="_blank>Services</a>
+        <a href="#services" target="_blank">Services</a>
         <a href="#blog" target="_blank" >Blog</a>
         <a href="#faqs" target="_blank">FAQs</a>
         <a href="#contact" target="_blank">Contact</a>
