--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
             <li>📊 Social Media Management</li>
             <li>🔖 Brand Identity Creation</li>
             <li>✍️ Article Writing</li>
+             <a href="https://wa.me/c/254742380183" class="btn">Projects</a>
         </ul>
     </div>
     <img src="https://i.pinimg.com/236x/5e/a2/33/5ea23390752fb31d688b8d6cf2bb7336.jpg" alt="Services Image">
