--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
             
         </ul>
              <br>
-          <a href="#" class="btn"> Book Now</a>
+          <a href="https://github.com/Sege-Peter/SkopeDesigns/blob/main/services.html" class="btn"> Book Now</a>
     </div>
     <img src="https://i.pinimg.com/236x/5e/a2/33/5ea23390752fb31d688b8d6cf2bb7336.jpg" alt="Services Image">
 </section>
