--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKOPE  DESIGNS</title>
+     <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/10/b8/8e/10b88e9fb82dd35825d1277965f0d5aa.jpg">
+    <link rel="shortcut icon" href="https://i.pinimg.com/736x/10/b8/8e/10b88e9fb82dd35825d1277965f0d5aa.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
