--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             box-sizing: border-box;
             font-family: 'Poppins', sans-serif;
         }
+        img.icon{
+            radius:50%;
+        }
         body {
             background-color: #181818;
             color: #f4f4f4;
