--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKOPE  DESIGNS</title>
-     <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/10/b8/8e/10b88e9fb82dd35825d1277965f0d5aa.jpg">
+     <link rel="icon" type="image/png" href="skope new logo.html.png">
     <link rel="shortcut icon" href="https://i.pinimg.com/736x/10/b8/8e/10b88e9fb82dd35825d1277965f0d5aa.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -261,7 +261,7 @@ background-repeat: no-repeat;
 <body>
 
 <header>
-    <img src="https://i.pinimg.com/736x/10/b8/8e/10b88e9fb82dd35825d1277965f0d5aa.jpg"alt="Skope Designs Logo" class="logo">
+    <img src="skope new logo.html.png"alt="Skope Designs Logo" class="logo">
     <h1>SKOPE DESIGNS</h1>
     <h2>Creative Design Studio</h2>
     <h3><i>Design Beyond Boundaries</i></h3>
@@ -269,11 +269,11 @@ background-repeat: no-repeat;
     <a href="https://wa.me/c/254742380183" class="btn">Projects</a>
      
     <nav>
-        <a href="#about" target="_blank">About</a>
-        <a href="#services" target="_blank">Services</a>
-        <a href="#blog" target="_blank" >Blog</a>
-        <a href="#faqs" target="_blank">FAQs</a>
-        <a href="#contact" target="_blank">Contact</a>
+        <a href="#about" >About</a>
+        <a href="#services">Services</a>
+        <a href="#blog"  >Blog</a>
+        <a href="#faqs" >FAQs</a>
+        <a href="#contact">Contact</a>
     </nav>
 </header>
 
