--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         }
         img.icon{
             radius:50%;
+            width: 200px;
         }
         body {
             background-color: #181818;
