--- a/index.html
+++ b/index.html
@@ -343,16 +343,43 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
 
 <section id="faqs" class="faqs">
     <h2>FAQs</h2>
-    <dl>
-        <dt>What is your process for starting a new project?</dt>
-        <dd>We start with a consultation to understand your needs and goals. Then, we create a project brief and timeline. Once agreed upon, we proceed with the design and keep you updated throughout the process.</dd>
-        <dt>How long does a typical project take?</dt>
-        <dd>Project timelines vary depending on complexity. On average, design projects take between 2 to 4 weeks.</dd>
-        <dt>What is your pricing structure?</dt>
-        <dd>Our pricing depends on the scope of the project. We provide a detailed quote after discussing your requirements.</dd>
-        <dt>Do you offer revisions?</dt>
-        <dd>Yes, we offer revisions based on the terms outlined in our agreement. We want to ensure you are satisfied with the final design.</dd>
-    </dl>
+<dl>
+    <dt>What services does Skope Designs offer?</dt>
+    <dd>We specialize in graphic design, branding, web design, social media management, and digital marketing. Our services include logo design, business cards, social media content, website development, and more.</dd>
+
+    <dt>What is your process for starting a new project?</dt>
+    <dd>We start with a consultation to understand your needs and goals. Then, we create a project brief and timeline. Once agreed upon, we proceed with the design and keep you updated throughout the process.</dd>
+
+    <dt>How long does a typical project take?</dt>
+    <dd>Project timelines vary depending on complexity. Estimated durations:
+        <ul>
+            <li><strong>Logo design:</strong> 1 to 3 days</li>
+            <li><strong>Social media graphics:</strong> 24 to 72 hours</li>
+            <li><strong>Website design:</strong> 2 to 4 weeks</li>
+            <li><strong>Marketing materials:</strong> 5 to 10 days</li>
+        </ul>
+        Expedited services are available upon request.
+    </dd>
+
+    <dt>Do you offer revisions?</dt>
+    <dd>Yes, we offer up to three free revisions to ensure your satisfaction. Additional revisions may be subject to extra charges.</dd>
+
+    <dt>Do I own the final design?</dt>
+    <dd>Yes, once full payment is received, you own the final design. However, we may showcase it in our portfolio unless otherwise agreed.</dd>
+
+    <dt>Do you design websites?</dt>
+    <dd>Yes, we create professional and responsive websites using platforms like WordPress, Shopify, and custom-coded solutions.</dd>
+
+    <dt>Do you provide social media management?</dt>
+    <dd>Yes, we offer social media content creation, strategy planning, and ad campaign management to help businesses grow online.</dd>
+
+    <dt>How can I contact Skope Designs?</dt>
+    <dd>
+    <a href="services.html"><strong>Contact Us Here</strong> </a> 
+        <strong>WhatsApp:</strong> <a href="https://chat.whatsapp.com/HBc25gQBosqD91ebi69REn">Join Our Free Learning Hub</a>
+    </dd>
+</dl>
+
 </section>
 
 <footer>
