--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
     <dd>Project timelines vary depending on complexity. Estimated durations:
         <ul>
             <li><strong>Logo design:</strong> 1 to 3 days</li>
-            <li><strong>Social media graphics:</strong> 24 to 72 hours</li>
+            <li><strong>Social media graphics:</strong> 6 - 24 hours</li>
             <li><strong>Website design:</strong> 2 to 4 weeks</li>
             <li><strong>Marketing materials:</strong> 5 to 10 days</li>
         </ul>
@@ -362,7 +362,7 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
     </dd>
 
     <dt>Do you offer revisions?</dt>
-    <dd>Yes, we offer up to three free revisions to ensure your satisfaction. Additional revisions may be subject to extra charges.</dd>
+    <dd>Yes, we offer up to two free revisions to ensure your satisfaction. Additional revisions may be subject to extra charges.</dd>
 
     <dt>Do I own the final design?</dt>
     <dd>Yes, once full payment is received, you own the final design. However, we may showcase it in our portfolio unless otherwise agreed.</dd>
@@ -376,6 +376,7 @@ At Skope Designs, we specialize in transforming your ideas into visually compell
     <dt>How can I contact Skope Designs?</dt>
     <dd>
     <a href="services.html"><strong>Contact Us Here</strong> </a> 
+        <br>
         <strong>WhatsApp:</strong> <a href="https://chat.whatsapp.com/HBc25gQBosqD91ebi69REn">Join Our Free Learning Hub</a>
     </dd>
 </dl>
