--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="Skope Designs, Sege Peter, Branding, Web Developer, Tailwind CSS, UI/UX Design, Python Developer, Java Developer, MySQL">
   <meta name="author" content="Sege Peter" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://www.skopedesigns.com/" />
+  <link rel="canonical" href="https://www.skopedesigns.co.ke/" />
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
@@ -121,21 +121,176 @@
     <li><a href="shop.html">Shop</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
+ <br>
+ <br>
+ <!-- Portfolio Section -->
+<section id="portfolio" class="bg-gray-50 py-16 px-4 md:px-20 text-center font-sans">
+  <h2 class="text-4xl font-bold text-orange-600 mb-4 animate__animated animate__fadeInDown">Our Creative Portfolio</h2>
+  <p class="text-gray-600 mb-10 text-lg">Explore a collection of our work — from designs to full websites and campaigns.</p>
 
-  <!-- HERO SECTION -->
-  <section id="hero" class="hero-slide h-screen flex flex-col justify-center items-center text-center px-6 bg-cover bg-center pt-[70px]">
-    <h1 class="text-4xl md:text-6xl font-extrabold mb-6 animate-pulse-slow">
-      <span>Designing Brands.</span>
-      <span>Building Code.</span>
-      <span class="text-secondary">Beyond Boundaries.</span>
-    </h1>
-    <p class="text-lg md:text-xl mb-10 max-w-2xl">We create stunning digital experiences that elevate your brand.</p>
-    <div class="flex flex-wrap justify-center gap-4">
-      <a href="service.html" class="bg-secondary hover:bg-orange-600 px-8 py-3 rounded-full">Get Started</a>
-      <a href="portfolio.html" class="bg-primary hover:bg-cyan-600 px-8 py-3 rounded-full">View Portfolio</a>
-      <a href="contact.html" class="bg-white text-dark hover:bg-gray-200 px-8 py-3 rounded-full">Join Hub</a>
-    </div>
-  </section>
+  <!-- Filter Menu -->
+  <div class="mb-12 flex flex-wrap justify-center gap-4">
+    <button class="filter-btn" data-filter="all">All</button>
+    <button class="filter-btn" data-filter="mockups">Mockups</button>
+    <button class="filter-btn" data-filter="posters">Posters</button>
+    <button class="filter-btn" data-filter="certificates">Certificates</button>
+    <button class="filter-btn" data-filter="events">Events</button>
+    <button class="filter-btn" data-filter="logos">Logos</button>
+    <button class="filter-btn" data-filter="holidays">National Holidays</button>
+    <button class="filter-btn" data-filter="magazines">Magazines</button>
+    <button class="filter-btn" data-filter="tickets">Tickets</button>
+  </div>
+
+  <!-- Gallery Grid -->
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 portfolio-items">
+  <!-- Mockups -->
+<img src="images/mockup1.png" alt="Mockup 1" class="portfolio-item mockups">
+<img src="images/mockup2.png" alt="Mockup 2" class="portfolio-item mockups">
+<img src="images/MOCKUP (3).png" alt="Mockup 3" class="portfolio-item mockups">
+<img src="images/MOCKUP (14).png" alt="Mockup 4" class="portfolio-item mockups">
+<img src="images/MOCKUP (5).png" alt="Mockup 5" class="portfolio-item mockups">
+<img src="images/mockup6.png" alt="Mockup 6" class="portfolio-item mockups">
+<img src="images/mockup7.png" alt="Mockup 7" class="portfolio-item mockups">
+<img src="images/mockup8.png" alt="Mockup 8" class="portfolio-item mockups">
+<img src="images/mockup9.png" alt="Mockup 9" class="portfolio-item mockups">
+<img src="images/mockup10.png" alt="Mockup 10" class="portfolio-item mockups">
+<img src="images/MOCKUP (10).png" alt="Mockup 11" class="portfolio-item mockups">
+<img src="images/mockup12.png" alt="Mockup 12" class="portfolio-item mockups">
+<img src="images/MOCKUP13.jpg" alt="Mockup 13" class="portfolio-item mockups">
+<img src="images/mockup (14).png" alt="Mockup 14" class="portfolio-item mockups">
+<img src="images/mockup (15).png" alt="Mockup 15" class="portfolio-item mockups">
+<img src="images/mockup (16).png" alt="Mockup 16" class="portfolio-item mockups">
+<img src="images/mockup (17).png" alt="Mockup 17" class="portfolio-item mockups">
+<img src="images/mockup (18).png" alt="Mockup 18" class="portfolio-item mockups">
+<img src="images/mockup (19).png" alt="Mockup 19" class="portfolio-item mockups">
+<img src="images/mockup (20).png" alt="Mockup 20" class="portfolio-item mockups">
+<img src="images/mockup (21).png" alt="Mockup 21" class="portfolio-item mockups">
+<img src="images/mockup (22).png" alt="Mockup 22" class="portfolio-item mockups">
+<img src="images/mockup (23).png" alt="Mockup 23" class="portfolio-item mockups">
+<img src="images/mockup (24).png" alt="Mockup 24" class="portfolio-item mockups">
+<img src="images/mockup (25).png" alt="Mockup 25" class="portfolio-item mockups">
+<img src="images/mockup (26).png" alt="Mockup 26" class="portfolio-item mockups">
+<img src="images/mockup (27).png" alt="Mockup 27" class="portfolio-item mockups">
+<img src="images/mockup (28).png" alt="Mockup 28" class="portfolio-item mockups">
+<img src="images/mockup (29).png" alt="Mockup 29" class="portfolio-item mockups">
+<img src="images/mockup (30).png" alt="Mockup 30" class="portfolio-item mockups">
+<img src="images/mockup (31).png" alt="Mockup 31" class="portfolio-item mockups">
+<!-- Posters -->
+<img src="images/POSTER (2).png" alt="Poster 2" class="portfolio-item posters">
+<img src="images/POSTER (3).png" alt="Poster 3" class="portfolio-item posters">
+<img src="images/POSTER (4).png" alt="Poster 4" class="portfolio-item posters">
+<img src="images/POSTER (5).png" alt="Poster 5" class="portfolio-item posters">
+<img src="images/POSTER (6).png" alt="Poster 6" class="portfolio-item posters">
+<img src="images/POSTER (7).png" alt="Poster 7" class="portfolio-item posters">
+<img src="images/POSTER (8).png" alt="Poster 8" class="portfolio-item posters">
+<img src="images/POSTER (9).png" alt="Poster 9" class="portfolio-item posters">
+<img src="images/POSTER (10).png" alt="Poster 10" class="portfolio-item posters">
+<img src="images/POSTER (11).png" alt="Poster 11" class="portfolio-item posters">
+<img src="images/POSTER (12).png" alt="Poster 12" class="portfolio-item posters">
+<img src="images/POSTER (13).png" alt="Poster 13" class="portfolio-item posters">
+<img src="images/POSTER (14).png" alt="Poster 14" class="portfolio-item posters">
+<img src="images/POSTER (15).png" alt="Poster 15" class="portfolio-item posters">
+<img src="images/POSTER (16).png" alt="Poster 16" class="portfolio-item posters">
+<img src="images/POSTER (17).png" alt="Poster 17" class="portfolio-item posters">
+<!-- Certificates -->
+    <img src="images/cert1.png" alt="Certificate 1" class="portfolio-item certificates">
+   <!-- Events -->
+<img src="images/event1.png" alt="Event 1" class="portfolio-item events">
+<img src="images/event2.png" alt="Event 2" class="portfolio-item events">
+<img src="images/event3.png" alt="Event 3" class="portfolio-item events">
+<img src="images/event4.png" alt="Event 4" class="portfolio-item events">
+<img src="images/event5.png" alt="Event 5" class="portfolio-item events">
+<img src="images/event6.png" alt="Event 6" class="portfolio-item events">
+<img src="images/event7.png" alt="Event 7" class="portfolio-item events">
+<img src="images/event8.png" alt="Event 8" class="portfolio-item events">
+<img src="images/event(1).png" alt="Event (1)" class="portfolio-item events">
+<img src="images/event(2).png" alt="Event (2)" class="portfolio-item events">
+<img src="images/event(3).png" alt="Event (3)" class="portfolio-item events">
+<img src="images/event(4).png" alt="Event (4)" class="portfolio-item events">
+<img src="images/event(5).png" alt="Event (5)" class="portfolio-item events">
+<!-- Logos -->
+<img src="images/logo (2).jpg" alt="Logo 2" class="portfolio-item logos">
+<img src="images/logo.png" alt="Logo" class="portfolio-item logos">
+<img src="images/logo (3).png" alt="Logo 3" class="portfolio-item logos">
+<img src="images/logo (4).png" alt="Logo 4" class="portfolio-item logos">
+<img src="images/logo (5).png" alt="Logo 5" class="portfolio-item logos">
+<img src="images/logo (6).png" alt="Logo 6" class="portfolio-item logos">
+<img src="images/logo (7).png" alt="Logo 7" class="portfolio-item logos">
+<img src="images/logo (8).png" alt="Logo 8" class="portfolio-item logos">
+<img src="images/logo (9).png" alt="Logo 9" class="portfolio-item logos">
+<img src="images/logo (10).png" alt="Logo 10" class="portfolio-item logos">
+<img src="images/logo (11).png" alt="Logo 11" class="portfolio-item logos">
+<img src="images/logo (12).png" alt="Logo 12" class="portfolio-item logos">
+<img src="images/logo (13).png" alt="Logo 13" class="portfolio-item logos">
+<img src="images/logo (14).png" alt="Logo 14" class="portfolio-item logos">
+<img src="images/logo (15).png" alt="Logo 15" class="portfolio-item logos">
+<img src="images/logo (16).png" alt="Logo 16" class="portfolio-item logos">
+ <!-- Holidays -->
+    <img src="images/jamuhuri.png" alt="Jamuhuri Day" class="portfolio-item holidays">
+    <img src="images/madaraka.png" alt="Madaraka Day" class="portfolio-item holidays">
+    <img src="images/mashujaa.png" alt="Mashujaa Day" class="portfolio-item holidays">
+    <img src="images/xmass2.png" alt="Xmass 2" class="portfolio-item holidays">
+  <!-- New Month Posters -->
+<img src="images/nm (7).png" alt="New Month Poster 1" class="portfolio-item posters">
+<img src="images/nm (2).png" alt="New Month Poster 2" class="portfolio-item posters">
+<img src="images/nm (3).png" alt="New Month Poster 3" class="portfolio-item posters">
+<img src="images/nm (4).png" alt="New Month Poster 4" class="portfolio-item posters">
+<img src="images/nm (5).png" alt="New Month Poster 5" class="portfolio-item posters">
+<img src="images/nm (6).png" alt="New Month Poster 6" class="portfolio-item posters">
+<!-- Magazine -->
+<img src="images/wm pg 1.png" alt="Magazine Page 1" class="portfolio-item magazines">
+<img src="images/wm pg 2.png" alt="Magazine Page 2" class="portfolio-item magazines">
+<img src="images/wm pg 3.png" alt="Magazine Page 3" class="portfolio-item magazines">
+<img src="images/wm pg 4.png" alt="Magazine Page 4" class="portfolio-item magazines">
+<img src="images/wm pg 5.png" alt="Magazine Page 5" class="portfolio-item magazines">
+<img src="images/wm pg 6.png" alt="Magazine Page 6" class="portfolio-item magazines">
+<!-- Tickets -->
+    <img src="images/ticket.jpeg" alt="Event Ticket" class="portfolio-item tickets">
+  </div>
+</section>
+
+<!-- JavaScript for Filtering -->
+<script>
+  const filterButtons = document.querySelectorAll('.filter-btn');
+  const items = document.querySelectorAll('.portfolio-item');
+
+  filterButtons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      const filter = btn.getAttribute('data-filter');
+      items.forEach(item => {
+        if (filter === 'all' || item.classList.contains(filter)) {
+          item.style.display = 'block';
+        } else {
+          item.style.display = 'none';
+        }
+      });
+    });
+  });
+</script>
+
+<style>
+  .filter-btn {
+    background: #f97316;
+    color: white;
+    padding: 8px 16px;
+    border-radius: 9999px;
+    font-weight: 600;
+    transition: background 0.3s;
+  }
+  .filter-btn:hover {
+    background: #ea580c;
+  }
+  .portfolio-item {
+    width: 100%;
+    border-radius: 12px;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+  }
+  .portfolio-item:hover {
+    transform: scale(1.05);
+    opacity: 0.95;
+  }
+</style>
+
 
   <!-- FOOTER -->
   <footer class="bg-primary py-8 px-6">
@@ -161,6 +316,24 @@
 
   <!-- SCRIPTS -->
    <script>
+  const filterBtns = document.querySelectorAll(".filter-btn");
+  const portfolioItems = document.querySelectorAll(".portfolio-item");
+
+  filterBtns.forEach(btn => {
+    btn.addEventListener("click", () => {
+      const category = btn.dataset.filter;
+      portfolioItems.forEach(item => {
+        if (category === "all" || item.classList.contains(category)) {
+          item.classList.remove("hidden");
+        } else {
+          item.classList.add("hidden");
+        }
+      });
+    });
+  });
+</script>
+
+   <script>
   const btn = document.getElementById('menu-btn');
   const mobile = document.getElementById('mobile-menu');
 
@@ -177,7 +350,7 @@
 
   // Hero BG Slider
   const hero = document.getElementById('hero');
-  const images = ['cover1.png','cover2.png','image/sege-profile.png'];
+  const images = ['img/cover1.png','img/cover2.png','img/sege-profile.png'];
   let idx = 0;
 
   function changeBg() {
