--- a/service.html
+++ b/service.html
@@ -122,20 +122,79 @@
     <li><a href="contact.html">Contact</a></li>
   </ul>
 
-  <!-- HERO SECTION -->
-  <section id="hero" class="hero-slide h-screen flex flex-col justify-center items-center text-center px-6 bg-cover bg-center pt-[70px]">
-    <h1 class="text-4xl md:text-6xl font-extrabold mb-6 animate-pulse-slow">
-      <span>Designing Brands.</span>
-      <span>Building Code.</span>
-      <span class="text-secondary">Beyond Boundaries.</span>
-    </h1>
-    <p class="text-lg md:text-xl mb-10 max-w-2xl">We create stunning digital experiences that elevate your brand.</p>
-    <div class="flex flex-wrap justify-center gap-4">
-      <a href="service.html" class="bg-secondary hover:bg-orange-600 px-8 py-3 rounded-full">Get Started</a>
-      <a href="portfolio.html" class="bg-primary hover:bg-cyan-600 px-8 py-3 rounded-full">View Portfolio</a>
-      <a href="contact.html" class="bg-white text-dark hover:bg-gray-200 px-8 py-3 rounded-full">Join Hub</a>
+  <br>
+<section id="services" class="bg-white py-20 px-6 md:px-20">
+  <div class="text-center mb-16">
+    <h2 class="text-4xl font-extrabold text-orange-600 mb-4 animate__animated animate__fadeInDown">Our Services</h2>
+    <p class="text-gray-600 text-lg animate__animated animate__fadeInUp">Empowering your brand with smart design, digital solutions, and creative storytelling.</p>
+  </div>
+
+  <div class="grid gap-10 md:grid-cols-3 lg:grid-cols-3">
+    <!-- Service Card -->
+    <div class="bg-gradient-to-br from-cyan-100 to-blue-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up">
+      <div class="text-5xl text-blue-700 mb-4"><i class="fas fa-pencil-ruler"></i></div>
+      <h3 class="text-xl font-bold mb-2 text-gray-800">Graphic Design</h3>
+      <p class="text-gray-600 mb-4">From logo design to social media creatives and branding materials — we craft visuals that connect.</p>
+      <a href="#contact" class="inline-block bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800 text-sm">Hire Us</a>
     </div>
-  </section>
+
+    <div class="bg-gradient-to-br from-orange-100 to-yellow-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="100">
+      <div class="text-5xl text-yellow-600 mb-4"><i class="fas fa-code"></i></div>
+      <h3 class="text-xl font-bold mb-2 text-gray-800">Web Design & Development</h3>
+      <p class="text-gray-600 mb-4">Responsive websites, blogs, portfolios, and systems — all SEO-ready and beautifully built.</p>
+      <a href="#projects" class="inline-block bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700 text-sm">View Projects</a>
+    </div>
+
+    <div class="bg-gradient-to-br from-green-100 to-lime-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="200">
+      <div class="text-5xl text-green-600 mb-4"><i class="fas fa-bullhorn"></i></div>
+      <h3 class="text-xl font-bold mb-2 text-gray-800">Social Media Marketing</h3>
+      <p class="text-gray-600 mb-4">We strategize and manage your digital presence — content plans, captions, engagement, and ads.</p>
+      <a href="#contact" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 text-sm">Boost My Brand</a>
+    </div>
+
+    <div class="bg-gradient-to-br from-pink-100 to-purple-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up">
+      <div class="text-5xl text-pink-600 mb-4"><i class="fas fa-lightbulb"></i></div>
+      <h3 class="text-xl font-bold mb-2 text-gray-800">Content Creation</h3>
+      <p class="text-gray-600 mb-4">Posters, reels, carousels, intros, digital flyers — content that sparks attention and conversions.</p>
+      <a href="#portfolio" class="inline-block bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 text-sm">See Samples</a>
+    </div>
+
+    <div class="bg-gradient-to-br from-red-100 to-pink-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="100">
+      <div class="text-5xl text-red-600 mb-4"><i class="fas fa-camera-retro"></i></div>
+      <h3 class="text-xl font-bold mb-2 text-gray-800">Photography</h3>
+      <p class="text-gray-600 mb-4">Event coverage, portraits, product photography and editing for digital & print display.</p>
+      <a href="#gallery" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 text-sm">View Gallery</a>
+    </div>
+
+    <div class="bg-gradient-to-br from-indigo-100 to-blue-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="200">
+      <div class="text-5xl text-indigo-600 mb-4"><i class="fas fa-video"></i></div>
+      <h3 class="text-xl font-bold mb-2 text-gray-800">Videography</h3>
+      <p class="text-gray-600 mb-4">Professional filming, editing, reels, YouTube intros, promo clips, and motion graphics.</p>
+      <a href="#contact" class="inline-block bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 text-sm">Request Shoot</a>
+    </div>
+
+    <div class="bg-gradient-to-br from-yellow-100 to-orange-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up">
+      <div class="text-5xl text-orange-600 mb-4"><i class="fas fa-chart-line"></i></div>
+      <h3 class="text-xl font-bold mb-2 text-gray-800">SEO & Analytics</h3>
+      <p class="text-gray-600 mb-4">We help you rank, track performance, and use data-driven insights to grow online visibility.</p>
+      <a href="#contact" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 text-sm">Optimize Site</a>
+    </div>
+
+    <div class="bg-gradient-to-br from-gray-100 to-slate-200 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="100">
+      <div class="text-5xl text-gray-700 mb-4"><i class="fas fa-id-badge"></i></div>
+      <h3 class="text-xl font-bold mb-2 text-gray-800">Branding & Identity</h3>
+      <p class="text-gray-600 mb-4">We build brands from the ground up — visuals, messaging, mockups, colors, and brand books.</p>
+      <a href="#about" class="inline-block bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-900 text-sm">Build My Brand</a>
+    </div>
+
+    <div class="bg-gradient-to-br from-blue-100 to-white p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="200">
+      <div class="text-5xl text-blue-500 mb-4"><i class="fas fa-chalkboard-teacher"></i></div>
+      <h3 class="text-xl font-bold mb-2 text-gray-800">Training & Mentorship</h3>
+      <p class="text-gray-600 mb-4">Join our Free Design Learning Hub to grow your digital and creative skills with mentorship and real projects.</p>
+      <a href="https://chat.whatsapp.com/HBc25gQBosqD91ebi69REn" target="_blank" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 text-sm">Join Free Training</a>
+    </div>
+  </div>
+</section>
 
   <!-- FOOTER -->
   <footer class="bg-primary py-8 px-6">
@@ -177,7 +236,7 @@
 
   // Hero BG Slider
   const hero = document.getElementById('hero');
-  const images = ['cover1.png','cover2.png','image/sege-profile.png'];
+  const images = ['img/cover1.png','img/cover2.png','img/sege-profile.png'];
   let idx = 0;
 
   function changeBg() {
