--- a/service.html
+++ b/service.html
@@ -5,13 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Skope Designs | Sege Peter | Designing Brands. Building Code. Beyond Boundaries.</title>
+  <meta name="description" content="Skope Designs is your creative partner for stunning graphic design, web development, and branding services in Kenya. Elevate your brand with our innovative visuals.">
+  <meta name="keywords" content="Skope Designs, graphic design Kenya, web design Kenya, branding, logo design, website development, social media design, Kenya designers">
+  <meta name="author" content="Skope Designs">
+
+  <!-- Open Graph (Facebook & LinkedIn) -->
+  <meta property="og:title" content="Skope Designs | Graphic & Web Design in Kenya">
+  <meta property="og:description" content="Elevate your brand with creative graphic design, professional websites, and branding solutions from Skope Designs, Kenya.">
+  <meta property="og:image" content="https://skopedesigns.co.ke/ceo sege.png">
+  <meta property="og:url" content="https://skopedesigns.co.ke/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Skope Designs | Graphic & Web Design in Kenya">
+  <meta name="twitter:description" content="Skope Designs offers creative graphic design, website development, and branding services in Kenya.">
+  <meta name="twitter:image" content="https://skopedesigns.co.ke/images/twitter-card.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" href="fav.ico" type="image/x-icon">
+
 
   <!-- SEO Meta -->
   <meta name="description" content="Skope Designs—led by Sege Peter—crafts compelling digital experiences. Specializing in branding, responsive web design, and modern development with Tailwind, Java, Python, MySQL.">
   <meta name="keywords" content="Skope Designs, Sege Peter, Branding, Web Developer, Tailwind CSS, UI/UX Design, Python Developer, Java Developer, MySQL">
   <meta name="author" content="Sege Peter" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://www.skopedesigns.com/" />
+  <link rel="canonical" href="https://www.skopedesigns.co.ke/" />
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
@@ -135,49 +155,53 @@
       <div class="text-5xl text-blue-700 mb-4"><i class="fas fa-pencil-ruler"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Graphic Design</h3>
       <p class="text-gray-600 mb-4">From logo design to social media creatives and branding materials — we craft visuals that connect.</p>
-      <a href="#contact" class="inline-block bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800 text-sm">Hire Us</a>
+      <a href="https://wa.me/254742380183?text=Hello%2C%20I%27m%20interested%20in%20your%20Graphic%20Design%20services.
+" class="inline-block bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800 text-sm">Hire Us</a>
     </div>
 
     <div class="bg-gradient-to-br from-orange-100 to-yellow-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="100">
       <div class="text-5xl text-yellow-600 mb-4"><i class="fas fa-code"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Web Design & Development</h3>
       <p class="text-gray-600 mb-4">Responsive websites, blogs, portfolios, and systems — all SEO-ready and beautifully built.</p>
-      <a href="#projects" class="inline-block bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700 text-sm">View Projects</a>
+      <a href="portfolio.html" class="inline-block bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700 text-sm">View Projects</a>
     </div>
 
     <div class="bg-gradient-to-br from-green-100 to-lime-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="200">
       <div class="text-5xl text-green-600 mb-4"><i class="fas fa-bullhorn"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Social Media Marketing</h3>
       <p class="text-gray-600 mb-4">We strategize and manage your digital presence — content plans, captions, engagement, and ads.</p>
-      <a href="#contact" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 text-sm">Boost My Brand</a>
+      <a href="https://wa.me/254742380183?text=Hello%2C%20I%27m%20interested%20in%20your%20Social%20Media%20Marketing%20services.
+" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 text-sm">Boost My Brand</a>
     </div>
 
     <div class="bg-gradient-to-br from-pink-100 to-purple-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up">
       <div class="text-5xl text-pink-600 mb-4"><i class="fas fa-lightbulb"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Content Creation</h3>
       <p class="text-gray-600 mb-4">Posters, reels, carousels, intros, digital flyers — content that sparks attention and conversions.</p>
-      <a href="#portfolio" class="inline-block bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 text-sm">See Samples</a>
+      <a href="portfolio.html" class="inline-block bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 text-sm">See Samples</a>
     </div>
 
     <div class="bg-gradient-to-br from-red-100 to-pink-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="100">
       <div class="text-5xl text-red-600 mb-4"><i class="fas fa-camera-retro"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Photography</h3>
       <p class="text-gray-600 mb-4">Event coverage, portraits, product photography and editing for digital & print display.</p>
-      <a href="#gallery" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 text-sm">View Gallery</a>
+      <a href="https://youtu.be/MPG--QQWuL4?si=7cBx37RUBD7TZb-G" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 text-sm">View Gallery</a>
     </div>
 
     <div class="bg-gradient-to-br from-indigo-100 to-blue-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="200">
       <div class="text-5xl text-indigo-600 mb-4"><i class="fas fa-video"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Videography</h3>
       <p class="text-gray-600 mb-4">Professional filming, editing, reels, YouTube intros, promo clips, and motion graphics.</p>
-      <a href="#contact" class="inline-block bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 text-sm">Request Shoot</a>
+      <a href="https://wa.me/254742380183?text=Hello%2C%20I%27m%20requesting%20for%20your%20Videography%20services.
+" class="inline-block bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 text-sm">Request Shoot</a>
     </div>
 
     <div class="bg-gradient-to-br from-yellow-100 to-orange-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up">
       <div class="text-5xl text-orange-600 mb-4"><i class="fas fa-chart-line"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">SEO & Analytics</h3>
       <p class="text-gray-600 mb-4">We help you rank, track performance, and use data-driven insights to grow online visibility.</p>
-      <a href="#contact" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 text-sm">Optimize Site</a>
+      <a href="https://wa.me/254742380183?text=Hello%2C%20I%27m%20interested%20in%20your%20SEO%20and%20Analytics%20services.
+" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 text-sm">Optimize Site</a>
     </div>
 
     <div class="bg-gradient-to-br from-gray-100 to-slate-200 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="100">
@@ -196,6 +220,59 @@
   </div>
 </section>
 
+<!-- Testimonials Section -->
+<section class="bg-gray-100 py-12">
+  <div class="container mx-auto px-4">
+    <h2 class="text-3xl font-bold text-center text-orange-700 mb-8">What Our Clients Say</h2>
+
+    <!-- Wrapper -->
+    <div id="testimonialWrapper" class="flex space-x-4 overflow-x-auto md:grid md:grid-cols-3 md:gap-6 md:space-x-0 no-scrollbar transition-all duration-500">
+      
+      <!-- Testimonial Card -->
+      <div class="flex-shrink-0 w-80 md:w-auto bg-white rounded-lg shadow-md p-6">
+        <p class="text-gray-700 mb-4">"Working with Skope Designs on our website was transformative. Their attention to detail and modern design approach brought our vision to life."</p>
+        <h4 class="text-green-700 font-semibold">Hope Rekindled Initiative</h4>
+        <span class="text-yellow-500">★★★★★</span>
+      </div>
+
+      <div class="flex-shrink-0 w-80 md:w-auto bg-white rounded-lg shadow-md p-6">
+        <p class="text-gray-700 mb-4">"Skope Designs gave our brand identity a complete makeover. From the logo to the brand guidelines, everything was crisp, creative, and meaningful."</p>
+        <h4 class="text-green-700 font-semibold">vincentmakori.co.ke</h4>
+        <span class="text-yellow-500">★★★★★</span>
+      </div>
+
+      <div class="flex-shrink-0 w-80 md:w-auto bg-white rounded-lg shadow-md p-6">
+        <p class="text-gray-700 mb-4">"Their ability to combine storytelling with elegant visuals gave our NGO site the credibility and charm we needed to connect with donors."</p>
+        <h4 class="text-green-700 font-semibold">Light & Nature Foundation</h4>
+        <span class="text-yellow-500">★★★★★</span>
+      </div>
+
+      <div class="flex-shrink-0 w-80 md:w-auto bg-white rounded-lg shadow-md p-6">
+        <p class="text-gray-700 mb-4">"The brand kit they created for our startup gave us a confident launch. Skope Designs delivers with excellence and creativity."</p>
+        <h4 class="text-green-700 font-semibold">Mama Bear</h4>
+        <span class="text-yellow-500">★★★★★</span>
+      </div>
+
+      <div class="flex-shrink-0 w-80 md:w-auto bg-white rounded-lg shadow-md p-6">
+        <p class="text-gray-700 mb-4">"From logo animation to social media templates, they gave us everything we needed to stand out online."</p>
+        <h4 class="text-green-700 font-semibold">We Can Feed Us</h4>
+        <span class="text-yellow-500">★★★★★</span>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Hide Scrollbar -->
+<style>
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+</style>
+
   <!-- FOOTER -->
   <footer class="bg-primary py-8 px-6">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center gap-6">
@@ -207,7 +284,7 @@
         </div>
       </div>
       <div class="flex gap-6 text-xl text-white">
-        <a href="https://facebook.com/Skope" class="hover:text-secondary"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://web.facebook.com/engskope/" class="hover:text-secondary"><i class="fab fa-facebook-f"></i></a>
         <a href="https://x.com/sege_peter79144" class="hover:text-secondary"><i class="fab fa-twitter"></i></a>
         <a href="instagram.com" class="hover:text-secondary"><i class="fab fa-instagram"></i></a>
         <a href="https://linkedin.com/in/peter-sege-221831303" class="hover:text-secondary"><i class="fab fa-linkedin"></i></a>
@@ -234,18 +311,7 @@
     document.getElementById('header').classList.toggle('scrolled', window.scrollY > 10);
   });
 
-  // Hero BG Slider
-  const hero = document.getElementById('hero');
-  const images = ['img/cover1.png','img/cover2.png','img/sege-profile.png'];
-  let idx = 0;
 
-  function changeBg() {
-    idx = (idx + 1) % images.length;
-    hero.style.backgroundImage = `linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)), url(${images[idx]})`;
-  }
-
-  hero.style.backgroundImage = `linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)), url(${images[0]})`;
-  setInterval(changeBg, 6000);
 
   // Set year
   document.getElementById('year').textContent = new Date().getFullYear();
