--- a/portfolio.html
+++ b/portfolio.html
@@ -418,7 +418,7 @@
         </div>
       </div>
       <div class="flex gap-6 text-xl text-white">
-        <a href="https://facebook.com/Skope" class="hover:text-secondary"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://web.facebook.com/engskope/" class="hover:text-secondary"><i class="fab fa-facebook-f"></i></a>
         <a href="https://x.com/sege_peter79144" class="hover:text-secondary"><i class="fab fa-twitter"></i></a>
         <a href="instagram.com" class="hover:text-secondary"><i class="fab fa-instagram"></i></a>
         <a href="https://linkedin.com/in/peter-sege-221831303" class="hover:text-secondary"><i class="fab fa-linkedin"></i></a>
@@ -583,3 +583,4 @@
   </script>
 </body>
 </html>
+
