--- a/about.html
+++ b/about.html
@@ -174,10 +174,10 @@
     <div class="relative overflow-hidden rounded-lg shadow-lg animate-slide-in-left">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="images/ceo sege.png" alt="Sege Peter" class="w-full object-cover" /></div>
-          <div class="swiper-slide"><img src="images/DSC_0237.jpg" alt="Sege Peter Speaking" class="w-full object-cover" /></div>
-           <div class="swiper-slide"><img src="images/sege1.jpg" alt="Sege Peter" class="w-full object-cover" /></div>
-          <div class="swiper-slide"><img src="images/sege2.jpg" alt="Sege Peter Speaking" class="w-full object-cover" /></div>
+          <div class="swiper-slide"><img src="ceo sege.png" alt="Sege Peter" class="w-full object-cover" /></div>
+          <div class="swiper-slide"><img src="DSC_0237.jpg" alt="Sege Peter Speaking" class="w-full object-cover" /></div>
+           <div class="swiper-slide"><img src="sege1.jpg" alt="Sege Peter" class="w-full object-cover" /></div>
+          <div class="swiper-slide"><img src="sege2.jpg" alt="Sege Peter Speaking" class="w-full object-cover" /></div>
         </div>
       </div>
     </div>
@@ -300,7 +300,7 @@
         </div>
       </div>
       <div class="flex gap-6 text-xl text-white">
-        <a href="https://facebook.com/Skope" class="hover:text-secondary"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://web.facebook.com/engskope/" class="hover:text-secondary"><i class="fab fa-facebook-f"></i></a>
         <a href="https://x.com/sege_peter79144" class="hover:text-secondary"><i class="fab fa-twitter"></i></a>
         <a href="instagram.com" class="hover:text-secondary"><i class="fab fa-instagram"></i></a>
         <a href="https://linkedin.com/in/peter-sege-221831303" class="hover:text-secondary"><i class="fab fa-linkedin"></i></a>
@@ -447,3 +447,4 @@
   </script>
 </body>
 </html>
+
