--- a/contact.html
+++ b/contact.html
@@ -277,7 +277,7 @@
 
       <!-- Social Icons -->
       <div class="flex gap-4 text-2xl text-slate-300 mt-4">
-        <a href="https://facebook.com/Skope" target="_blank" class="hover:text-orange-400"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://web.facebook.com/engskope/" target="_blank" class="hover:text-orange-400"><i class="fab fa-facebook-f"></i></a>
         <a href="https://x.com/sege_peter79144" target="_blank" class="hover:text-orange-400"><i class="fab fa-twitter"></i></a>
         <a href="https://instagram.com" target="_blank" class="hover:text-orange-400"><i class="fab fa-instagram"></i></a>
         <a href="https://linkedin.com/in/peter-sege-221831303" target="_blank" class="hover:text-orange-400"><i class="fab fa-linkedin-in"></i></a>
@@ -685,3 +685,4 @@
   </script>
 </body>
 </html>
+
